--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@ body {
   width: 100%;
   height: 100%;
   position: fixed;
+  overflow-y: scroll;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
