--- a/src/App.css
+++ b/src/App.css
@@ -860,12 +860,12 @@ font-size: 1.6vh;
   
   .site_content {
     width: 100vw;
-    height: 100vh;
+    height: 90vh;
     position: fixed;
     display: grid;
     grid-template-columns: [first] 15% [second] 85% [third] 0;
     grid-template-rows: [row1] 100% ;
-    overflow: scroll;
+    overflow-y: scroll;
     
   }
 
