--- a/src/App.css
+++ b/src/App.css
@@ -874,6 +874,7 @@ font-size: 1.6vh;
     display: grid;
     width: 100%;
     height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
     grid-column-start: second;
     grid-column-end: auto;
     grid-row-start: row1;
@@ -886,6 +887,7 @@ font-size: 1.6vh;
   width: 100%;
   /* overflow-y: scroll; */
   height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   /* display: flex;
   flex-flow: column-reverse;
   box-sizing: border-box; */
