--- a/src/App.css
+++ b/src/App.css
@@ -481,10 +481,12 @@ box-sizing: border-box;
   display: flex;
   justify-content: center;
   align-items: baseline;
+  margin-top: 50px;
 }
 
 .testimonials-button {
-    width: 70%;
+    width: 100%;
+    height: 45px;
     min-height: 30%;
     font-family: 'Open Sans', sans-serif;
     font-weight: 600;
@@ -497,6 +499,8 @@ box-sizing: border-box;
     letter-spacing: 0.4ch;
     text-align: center;
     transition: 0.6s ease;
+    cursor: pointer;
+    padding: 0px 15px 0px 15px;
 }
 
 .testimonials-button:hover {
@@ -815,16 +819,19 @@ position: relative;
 
   .testimonial-button-container {
     width: 100%;
-    position: absolute;
-    bottom: 45px;
+    display: flex;
+    margin-bottom: 300px;
+    box-sizing: border-box;
+    /* position: absolute;
+    bottom: 85px; */
    
   }
   
   .testimonials-button {
-      width: 70%;
+      width: 100%;
       min-height: 35px;
       font-family: 'Open Sans', sans-serif;
-      font-weight: 600;
+      font-weight: 400;
       background: linear-gradient(to top right, #a85858fd, rgba(146, 30, 30, 0.87));
       border: 0px solid #535353;
       border-radius: 15px;
@@ -834,8 +841,29 @@ position: relative;
       letter-spacing: 0.4ch;
       text-align: center;
       transition: 0.6s ease;
-      padding: 5px 10px 5px 10px;
+      padding: 5px 15px 5px 15px;
   }
+/* 
+  width: 100%;
+  height: 45px;
+  min-height: 30%;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 600;
+  background: none;
+  border: 1px solid #535353;
+  border-radius: 15px;
+  box-sizing: border-box;
+  font-size: 10pt;
+  color: #535353;
+  letter-spacing: 0.4ch;
+  text-align: center;
+  transition: 0.6s ease;
+  cursor: pointer;
+  padding: 0px 15px 0px 15px; */
+
+
+
+
 
 
 
