--- a/src/App.css
+++ b/src/App.css
@@ -795,7 +795,7 @@ position: relative;
   
   
   .about_me {
-    height: 150vh;
+    height: 170vh;
     padding: 5% 5% 0% 5%;
     box-sizing: border-box;
     grid-row-start: second;
@@ -806,7 +806,10 @@ position: relative;
 
   }
   
-
+  .textbody_container {
+ 
+    overflow-y: hidden; 
+    }
 
   .about_me_photo {
     width: 70%;
@@ -843,23 +846,6 @@ position: relative;
       transition: 0.6s ease;
       padding: 5px 15px 5px 15px;
   }
-/* 
-  width: 100%;
-  height: 45px;
-  min-height: 30%;
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 600;
-  background: none;
-  border: 1px solid #535353;
-  border-radius: 15px;
-  box-sizing: border-box;
-  font-size: 10pt;
-  color: #535353;
-  letter-spacing: 0.4ch;
-  text-align: center;
-  transition: 0.6s ease;
-  cursor: pointer;
-  padding: 0px 15px 0px 15px; */
 
 
 
