--- a/src/App.css
+++ b/src/App.css
@@ -1336,8 +1336,6 @@ top: 0;
     align-items: center;
     justify-content: left;
     position: relative;
-    
-    
         }
 
 
@@ -1347,27 +1345,33 @@ top: 0;
         }
         
         .home_headline {
+          top: 32%;
           width: 65%;
+          padding: 3%;
                 
         
         }
 
         .about_me_container {
           grid-template-rows: [row1] 100%;
-          grid-template-columns: [first]60% [second]auto;
-          width: 100%;
+          grid-template-columns: [first]65% [second]35%;
+          width: 85vw;
+          height: 100 --vh;
           margin-top: 0;
+          overflow: hidden;
         }
 
         .about_me {
           padding: 0% 0% 0% 5%;
           box-sizing: border-box;
           width: 100%;
-          height: 95%;
+          height: 80%;
           align-self: center;
           grid-column: first;
           grid-row-start: row1;
-          grid-row-end: auto 
+          grid-row-end: auto;
+          overflow-x: hidden;
+          overflow-y: scroll;
         
         }
         
@@ -1377,18 +1381,62 @@ top: 0;
           height: auto;
           background-position: center;
           grid-column: second;         
-          padding: 20px;
+                    box-sizing: border-box;
           border-top: 20px solid #00000000;
         }
       
+        .textbody_container {
+          height: 80vh;
+        }
+
+        
+  .testimonial-button-container {
+    width: 100%;
+    display: flex;
+    margin-bottom: 50px;
+    box-sizing: border-box;
+   
+  }
+
+  .testimonials-button {
+    font-size: 8pt;
+
+}
+
+.testimonials-container {
+  width: 85vw;
+  height: fit-content;
+  padding: 35px;
+  margin-bottom: 50px;
+  justify-content: center;
+}
+
+.titlestyle2 {
+  font-family: 'Open Sans', sans-serif;
+font-weight: 600;
+font-size: 3.7vh;
+color: #940000;
+letter-spacing: 0.2ch;
+margin-bottom: 0;
+margin-top: 0;
+}
+
+.testimonial-entry2 {
+
+  padding-left: 0%;
+}
 
         .contact-main {
-          width: 80%;
+          width: 85vw;
           height: 100vh;
           display: flex;
           flex-flow: column;
           place-content: center;
           
+        }
+
+        .contact-info {
+          width: 85vw;
         }
 
         .contact-entry {
