--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,12 @@ a.contact-linkedin2 {
   color: white;
 }
 
+.js-loading *,
+.js-loading *:before,
+.js-loading *:after {
+  animation-play-state: paused !important;
+}
+
 .site_content {
 width: 100vw;
 height: 100vh;
