--- a/src/App.css
+++ b/src/App.css
@@ -1111,9 +1111,9 @@ animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
     left: 2%;
     background-color: #d8d8d8bb;
     padding: 5%;
-    -webkit-animation: slide-in-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+    /* -webkit-animation: slide-in-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
     animation: slide-in-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-    animation-delay: 2s;
+    animation-delay: 2s; */
   }
   
 
