--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,10 @@ a.contact-linkedin2 {
   color: white;
 }
 
+/* a.nav_buttons {
+  width: 100%;
+} */
+
 .js-loading *,
 .js-loading *:before,
 .js-loading *:after {
@@ -1544,7 +1548,7 @@ text-align: center;
 font-size: 10pt;
 color: #535353;
 letter-spacing: 0.2ch;
-display: flex;
+/* display: flex; */
 align-items: center;
 padding-left: 5%;
 }
@@ -2139,8 +2143,9 @@ margin-top: 0;
   font-size: 10pt;
   color: #535353;
   letter-spacing: 0.2ch;
-  display: flex;
+  /* display: flex; */
   align-items: center;
+  justify-content: center;
   padding-left: 5%;
   }
   
