--- a/src/App.css
+++ b/src/App.css
@@ -1089,6 +1089,16 @@ margin-top: 0;
     display: none;
   }
 
+
+  .next-slide {
+    display: none;
+  }
+  
+  .last-slide {
+    display: none;
+  }
+
+
   .face {
     width: 100px;
     justify-content: center;
