--- a/src/App.css
+++ b/src/App.css
@@ -1360,9 +1360,8 @@ font-weight: 400;
     }
 
   .about_me_photo {
-    width: 70%;
-    height: 100%;
-    background-position: top;
+    width: 100%;
+    background-position: 50% 30%;
     border-top: 0px solid #00000000;
     justify-self: center;
   }
@@ -1738,7 +1737,7 @@ font-size: 1.6vh;
   
 
   .about_me_photo {
-    width: 110%;
+    /* width: 100%; */
     height: auto;
     background-position: center;
    
@@ -2102,6 +2101,10 @@ margin-top: 0;
      
       }
     
+      .about_me_photo {
+        width: 100%;
+      }
+      
   }
 
 @media only screen and (max-width: 340px) and (max-height: 500px)  {
