--- a/src/App.css
+++ b/src/App.css
@@ -211,37 +211,32 @@ border-right: 1px solid #acacac4f;
 
 
 .home_main {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
-  background-position: contain ;
+  background-position:center center ;
+  background-size: 120%;
   position: relative;
-  display: flex;
+  /* display: flex;
   justify-content: center;
-  align-items: center;
-  -webkit-animation: fade-in 3.2s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
-    animation: fade-in 3.2s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+  align-items: center; */
+  
 }
 
 .home_headline {
-  width: 70%;
-  height: fit-content;
-  font-weight: 800;
+  width: 60%;
+  height: 50%;
+ display: flex;
+ flex-flow: column;
+ justify-content: space-between;
   background: none;
   border: 0px solid rgb(41, 41, 41);
   box-sizing: border-box;
-  font-size: 2.5vw;
-  background-color: #fcfcfc77;
-  color: #ffffff;
-  letter-spacing: 0.5ch;
   padding: 2% 2% 2% 2%;
-  margin: 0;
+  margin: 5px 5px 5px 5px;
   position: absolute; 
-  bottom: 5%;
+  bottom: 20%;
+  /* transform: translate(-50% 50%); */
   left: 1%;
-  -webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
-  animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
-    animation-delay: 2s;
-
 }
 
 
@@ -272,34 +267,133 @@ border-right: 1px solid #acacac4f;
 }
 
 .text1 {
-color: #813e3e;
+  height: 15%;
+color: #252525;
+font-family: 'Open Sans', sans-serif;
 font-size: 2.0vw;
 font-weight: 800;
 -webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
-animation-delay: 2.6s;
+animation-delay: 0.6s;
+padding: 0px;
+margin: 0px;
+
 }
 
 .text2 {
-  color: #333333;
-  font-size: 2.0vw;
-  font-weight: 800;
-  -webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
-  animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
-  animation-delay: 3.4s;
+  height: 15%;
+color: #252525;
+font-family: 'Open Sans', sans-serif;
+font-size: 2.0vw;
+font-weight: 800;
+-webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+animation-delay: 2.6s; 
+padding: 0px;
+margin: 0px;
   }
+
+.beauty {
+  width: 60%;
+  height: 15%;
+  -webkit-animation: text-focus-in 3s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+  animation: text-focus-in 3s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+  animation-delay: 3.2s;
+  padding: 0px;
+margin: 5px 0px 0px 5px;
+
+}
+
+.coffee1 {
+  opacity: 50%;
+  width: 5000px;
+  height: 5000px;
+  position: absolute;
+  top: -150%;
+  right: 10%;
+  pointer-events: none;
+  -webkit-animation: rotate-center 1000s linear infinite both;
+  animation: rotate-center 1000s linear infinite both;
+}
+.coffee2 {
+  opacity: 50%;
+  width: 5000px;
+  height: 5000px;
+  position: absolute;
+  top: -150%;
+  right: 10%;
+  pointer-events: none;
+  -webkit-animation: rotate-center 400s linear infinite reverse both;
+  animation: rotate-center 400s linear infinite reverse both;
+}
+.coffee3 {
+  opacity: 50%;
+  width: 5000px;
+  height: 5000px;
+  position: absolute;
+  top: -150%;
+  right: 10%;
+  pointer-events: none;
+  -webkit-animation: rotate-center 650s linear infinite both;
+  animation: rotate-center 650s linear infinite both;
+}
+
+@-webkit-keyframes rotate-center {
+  0% {
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+@keyframes rotate-center {
+  0% {
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
 
   .text3 {
-    color: #813e3e;
-    font-size: 2.0vw;
-    font-weight: 800;
-    -webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
-    animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
-    animation-delay: 4.2s;
+    text-align: left;
+    height: 25%;
+    font-family: 'Open Sans', sans-serif;
+    color: #111111;
+    font-size: 1.1vw;
+    font-weight: 200;
+    -webkit-animation: text-focus-in 0.8s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+    animation: text-focus-in 0.8s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+    animation-delay: 6.6s;
+    padding-top: 50px;
+margin-top: 20px;
   }
 
 
-
+.portfolio-button {
+  margin-top: 25px;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 10pt;
+  letter-spacing: 0.1ch;
+  font-weight: 200;
+  background-color: #940000;
+  border: none;
+  outline: hidden;
+  color: #f5f5f5;
+  width: 25%;
+  padding: 2%;
+  border-radius: 5px;
+  text-align: center;
+  justify-content: center;
+  -webkit-animation: fade-in 0.5s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+    animation: fade-in 0.5s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+    animation-delay: 8.6s;
+}
 
 
 .contact-main {
@@ -1196,9 +1290,10 @@ font-weight: 400;
 
  
   .home_main {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
-       background-position:35% ;
+       background-position:center center ;
+       background-size: 50%;
     display: flex;
     margin-top: -20px;
     -webkit-animation: fade-in 3.2s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
@@ -1230,6 +1325,7 @@ font-weight: 400;
     left: 2%;
     background-color: #d8d8d8bb;
     padding: 5%;
+  
     /* -webkit-animation: slide-in-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
     animation: slide-in-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
     animation-delay: 2s; */
